--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/clipboard": "^1.5.1",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-otp-form": "^1.0.2",
+    "react-native-otp-verify": "^1.0.4",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
