--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "nutil": "^1.1.3",
+    "otp-client": "^1.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-otp-form": "^1.0.2",
     "react-native-otp-verify": "^1.0.4",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
